@@ -1,6 +1,7 @@
 LIST OF CHANGES
 ---------------
 
+ - allow non consented human split for GBS runs
  - allow analysis of single-end runs with non-consented human split
 
 release 62.0.4
